--- a/package.json
+++ b/package.json
@@ -2,17 +2,25 @@
   "name": "landingpage-react-template",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "create-react-app": "^5.0.1",
     "emailjs-com": "^2.6.4",
     "gh-pages": "^4.0.0",
     "global": "^4.4.0",
     "react": "^17.0.1",
     "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.1",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "5.3.0",
     "react-scripts": "^5.0.0",
-    "smooth-scroll": "^16.1.3"
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
+    "smooth-scroll": "^16.1.3",
+    "styled-components": "^5.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
